Precompute filtered graphs during cycle search; fixes timeouts on small SCCS